Fix visibility footer

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -52,7 +52,9 @@
   display: flex;
   justify-content: center
 }
-
+.hidden {
+  display: none;
+}
 .counter {
   position: absolute;
   left: 0;
